Redux with Vanilla Javascript and React code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Udacity Todos Course</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+    <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   </head>
   <body>
     <div>
@@ -21,6 +24,11 @@
       <ul id='goals'>
 
       </ul>
+    </div>
+
+    <hr/>
+
+    <div id='app'>
     </div>
 
     <script type="text/javascript">
@@ -203,6 +211,118 @@
       document.getElementById('todobtn').addEventListener('click',addTodo)
       document.getElementById('goalbtn').addEventListener('click',addGoal)
 
+    </script>
+
+    <script type='text/babel'>
+
+     function List(props){
+       return (
+         <ul>
+          {props.items.map((item) => (
+            <li key={item.id}>
+              <span onClick={()=> props.toggle && props.toggle(item) }
+                style={{textDecoration: item.complete ? 'line-through': 'none'}}>
+                {item.name}
+              </span>
+              <button onClick={() => props.remove(item)}>X</button>
+            </li>
+          ))}
+         </ul>
+       )
+     }
+
+     class Todos extends React.Component{
+
+       removeItem = (todo) => {
+         this.props.store.dispatch(removeToDoAction(todo.id))
+       }
+
+       toggleItem = (todo) => {
+         this.props.store.dispatch(toggleToDoAction(todo.id))
+       }
+
+       addItem = (e) => {
+         e.preventDefault()
+         const name = this.input.value
+         this.input.value=''
+
+         this.props.store.dispatch(addToDoAction(
+         {
+           name,
+           complete: false,
+           id: generateId()
+         }
+         ))
+       }
+
+       render(){
+         return (
+           <div>
+             <h1>Todo List</h1>
+             <input type="text" placeholder="Add Todo" ref={(input)=> this.input=input } />
+             <button type="button" onClick={this.addItem}>Add Todo</button>
+             <List items={this.props.todos} remove={this.removeItem} toggle={this.toggleItem}/>
+           </div>
+         )
+       }
+     }
+
+     class Goals extends React.Component{
+
+       removeItem = (goal) => {
+         this.props.store.dispatch(removeGoalAction(goal.id))
+       }
+
+       addItem = (e) => {
+         e.preventDefault()
+         const name = this.input.value
+         this.input.value=''
+
+         this.props.store.dispatch(addGoalAction(
+         {
+           name,
+           id: generateId()
+         }
+         ))
+
+       }
+
+       render(){
+         return (
+           <div>
+             <h1>Goals List</h1>
+             <input type="text" placeholder="Add Goal" ref={(input)=> this.input=input } />
+             <button type="button" onClick={this.addItem}>Add Todo</button>
+             <List items={this.props.goals} remove={this.removeItem}/>
+           </div>
+         )
+       }
+     }
+
+      class App extends React.Component {
+
+        componentDidMount(){
+          const {store} = this.props
+          store.subscribe(() => this.forceUpdate())
+        }
+
+        render(){
+          const {store} = this.props
+          const {goals,todos} = store.getState()
+
+          return (
+            <div>
+              <Todos todos={todos} store={this.props.store}/>
+              <Goals goals={goals} store={this.props.store}/>
+            </div>
+          )
+        }
+      }
+
+      ReactDOM.render(
+        <App store={store}/>,
+        document.getElementById('app')
+      )
     </script>
   </body>
 </html>
