--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
   </head>
   <body>
 
@@ -26,6 +27,7 @@
       const TOGGLE_TODO='TOGGLE_TODO'
       const ADD_GOAL='ADD_GOAL'
       const REMOVE_GOAL='REMOVE_GOAL'
+      const RECEIVE_DATA='RECEIVE_DATA'
 
       function addToDoAction(todo){
         return {
@@ -62,6 +64,14 @@
         }
       }
 
+      function receiveDataAction(todos,goals){
+        return {
+          type: RECEIVE_DATA,
+          todos,
+          goals
+        }
+      }
+
       function todos(state=[],action) {
         switch(action.type){
           case ADD_TODO:
@@ -73,6 +83,8 @@
           case TOGGLE_TODO:
             return state.map((todo) => todo.id!==action.id ? todo :
               Object.assign({},todo,{complete: !todo.complete}))
+          case RECEIVE_DATA:
+            return action.todos
           default:
             return state
         }
@@ -86,6 +98,17 @@
             return state.filter((goal) =>
               goal.id !== action.id
             )
+          case RECEIVE_DATA:
+              return action.goals
+          default:
+            return state
+        }
+      }
+
+      function loading(state=true,action){
+        switch (action.type) {
+          case RECEIVE_DATA:
+            return false
           default:
             return state
         }
@@ -112,7 +135,8 @@
 
       const store=Redux.createStore(Redux.combineReducers({
         todos,
-        goals
+        goals,
+        loading
       }),Redux.applyMiddleware(checker,logger))
 
     </script>
@@ -139,24 +163,36 @@
 
        removeItem = (todo) => {
          this.props.store.dispatch(removeToDoAction(todo.id))
+
+         return API.deleteTodo(todo.id)
+         .catch(() => {
+            this.props.store.dispatch(addToDoAction(todo))
+            alert('An error occurred. Try again')
+         })
        }
 
        toggleItem = (todo) => {
          this.props.store.dispatch(toggleToDoAction(todo.id))
+
+         return API.saveTodoToggle(todo.id)
+         .catch(() => {
+            this.props.store.dispatch(toggleToDoAction(todo.id))
+            alert('An error occurred. Try again')
+         })
        }
 
        addItem = (e) => {
          e.preventDefault()
-         const name = this.input.value
-         this.input.value=''
 
-         this.props.store.dispatch(addToDoAction(
-         {
-           name,
-           complete: false,
-           id: generateId()
-         }
-         ))
+         return API.saveTodo(this.input.value)
+         .then((todo) => {
+           this.props.store.dispatch(addToDoAction(todo))
+           this.input.value=''
+         })
+         .catch(() => {
+            alert('Unable to add item. Try again')
+            this.input.value=''
+         })
        }
 
        render(){
@@ -175,20 +211,26 @@
 
        removeItem = (goal) => {
          this.props.store.dispatch(removeGoalAction(goal.id))
+
+         return API.deleteGoal(goal.id)
+         .catch(() => {
+            this.props.store.dispatch(addGoalAction(goal))
+            alert('An error occurred. Try again')
+         })
        }
 
        addItem = (e) => {
          e.preventDefault()
-         const name = this.input.value
-         this.input.value=''
 
-         this.props.store.dispatch(addGoalAction(
-         {
-           name,
-           id: generateId()
-         }
-         ))
-
+         return API.saveGoal(this.input.value)
+         .then((goal) => {
+           this.props.store.dispatch(addGoalAction(goal))
+           this.input.value=''
+         })
+         .catch(() => {
+           alert('Unable to add item. Try again')
+           this.input.value=''
+         })
        }
 
        render(){
@@ -196,7 +238,7 @@
            <div>
              <h1>Goals List</h1>
              <input type="text" placeholder="Add Goal" ref={(input)=> this.input=input } />
-             <button type="button" onClick={this.addItem}>Add Todo</button>
+             <button type="button" onClick={this.addItem}>Add Goal</button>
              <List items={this.props.goals} remove={this.removeItem}/>
            </div>
          )
@@ -207,12 +249,24 @@
 
         componentDidMount(){
           const {store} = this.props
+
+          Promise.all([
+          API.fetchTodos(),
+          API.fetchGoals()
+        ]).then(([ todos, goals ]) => {
+          store.dispatch(receiveDataAction(todos,goals))
+        })
+
           store.subscribe(() => this.forceUpdate())
         }
 
         render(){
           const {store} = this.props
-          const {goals,todos} = store.getState()
+          const {goals,todos,loading} = store.getState()
+
+          if(loading === true){
+            return <h3>Loading...</h3>
+          }
 
           return (
             <div>
