--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
+    <script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
   </head>
   <body>
 
@@ -69,6 +70,80 @@
           type: RECEIVE_DATA,
           todos,
           goals
+        }
+      }
+
+      function handleInitialData(){
+        return (dispatch) => {
+          return Promise.all([
+          API.fetchTodos(),
+          API.fetchGoals()
+        ]).then(([ todos, goals ]) => {
+          dispatch(receiveDataAction(todos,goals))
+        })
+        }
+      }
+
+      function handleAddTodo(name,cb){
+        return (dispatch) => {
+          return API.saveTodo(name)
+          .then((todo) => {
+            dispatch(addToDoAction(todo))
+            cb()
+          })
+          .catch(() => {
+             alert('Unable to add item. Try again')
+             cb()
+          })
+        }
+      }
+
+      function handleToggleTodo(todo){
+        return (dispatch) => {
+          dispatch(toggleToDoAction(todo.id))
+
+          return API.saveTodoToggle(todo.id)
+          .catch(() => {
+             dispatch(toggleToDoAction(todo.id))
+             alert('An error occurred. Try again')
+          })
+        }
+      }
+
+      function handleDeleteTodo(todo){
+        return (dispatch) => {
+          dispatch(removeToDoAction(todo.id))
+          return API.deleteTodo(todo.id)
+          .catch(() => {
+             dispatch(addToDoAction(todo))
+             alert('An error occurred. Try again')
+          })
+        }
+      }
+
+      function handleAddGoal(name, cb){
+        return (dispatch) => {
+          return API.saveGoal(name)
+          .then((goal) => {
+            dispatch(addGoalAction(goal))
+            cb()
+          })
+          .catch(() => {
+            alert('Unable to add item. Try again')
+            cb()
+          })
+        }
+      }
+
+      function handleDeleteGoal(goal){
+        return (dispatch) => {
+          dispatch(removeGoalAction(goal.id))
+
+          return API.deleteGoal(goal.id)
+          .catch(() => {
+             dispatch(addGoalAction(goal))
+             alert('An error occurred. Try again')
+          })
         }
       }
 
@@ -137,7 +212,7 @@
         todos,
         goals,
         loading
-      }),Redux.applyMiddleware(checker,logger))
+      }),Redux.applyMiddleware(ReduxThunk.default,checker,logger))
 
     </script>
 
@@ -162,37 +237,18 @@
      class Todos extends React.Component{
 
        removeItem = (todo) => {
-         this.props.store.dispatch(removeToDoAction(todo.id))
-
-         return API.deleteTodo(todo.id)
-         .catch(() => {
-            this.props.store.dispatch(addToDoAction(todo))
-            alert('An error occurred. Try again')
-         })
+         this.props.store.dispatch(handleDeleteTodo(todo))
        }
 
        toggleItem = (todo) => {
-         this.props.store.dispatch(toggleToDoAction(todo.id))
-
-         return API.saveTodoToggle(todo.id)
-         .catch(() => {
-            this.props.store.dispatch(toggleToDoAction(todo.id))
-            alert('An error occurred. Try again')
-         })
+         this.props.store.dispatch(handleToggleTodo(todo))
        }
 
        addItem = (e) => {
          e.preventDefault()
-
-         return API.saveTodo(this.input.value)
-         .then((todo) => {
-           this.props.store.dispatch(addToDoAction(todo))
-           this.input.value=''
-         })
-         .catch(() => {
-            alert('Unable to add item. Try again')
-            this.input.value=''
-         })
+         this.props.store.dispatch(handleAddTodo(this.input.value,
+           () => this.input.value=''
+         ))
        }
 
        render(){
@@ -210,27 +266,14 @@
      class Goals extends React.Component{
 
        removeItem = (goal) => {
-         this.props.store.dispatch(removeGoalAction(goal.id))
-
-         return API.deleteGoal(goal.id)
-         .catch(() => {
-            this.props.store.dispatch(addGoalAction(goal))
-            alert('An error occurred. Try again')
-         })
+         this.props.store.dispatch(handleDeleteGoal(goal))
        }
 
        addItem = (e) => {
          e.preventDefault()
-
-         return API.saveGoal(this.input.value)
-         .then((goal) => {
-           this.props.store.dispatch(addGoalAction(goal))
-           this.input.value=''
-         })
-         .catch(() => {
-           alert('Unable to add item. Try again')
-           this.input.value=''
-         })
+         this.props.store.dispatch(handleAddGoal(this.input.value,
+           () => this.input.value=''
+         ))
        }
 
        render(){
@@ -245,17 +288,14 @@
        }
      }
 
-      class App extends React.Component {
+     class App extends React.Component {
 
         componentDidMount(){
           const {store} = this.props
 
-          Promise.all([
-          API.fetchTodos(),
-          API.fetchGoals()
-        ]).then(([ todos, goals ]) => {
-          store.dispatch(receiveDataAction(todos,goals))
-        })
+          store.dispatch(handleInitialData())
+
+
 
           store.subscribe(() => this.forceUpdate())
         }
