Added context to App, Goals and Todos Components

--- a/index.html
+++ b/index.html
@@ -237,16 +237,16 @@
      class Todos extends React.Component{
 
        removeItem = (todo) => {
-         this.props.store.dispatch(handleDeleteTodo(todo))
+         this.props.dispatch(handleDeleteTodo(todo))
        }
 
        toggleItem = (todo) => {
-         this.props.store.dispatch(handleToggleTodo(todo))
+         this.props.dispatch(handleToggleTodo(todo))
        }
 
        addItem = (e) => {
          e.preventDefault()
-         this.props.store.dispatch(handleAddTodo(this.input.value,
+         this.props.dispatch(handleAddTodo(this.input.value,
            () => this.input.value=''
          ))
        }
@@ -263,64 +263,120 @@
        }
      }
 
-     class Goals extends React.Component{
+     class ConnectedTodos extends React.Component {
+       render() {
+         return (
+           <Context.Consumer>
+             {(store) => {
+               const { todos } = store.getState()
 
-       removeItem = (goal) => {
-         this.props.store.dispatch(handleDeleteGoal(goal))
+               return <Todos todos={todos} dispatch={store.dispatch}/>
+             }}
+           </Context.Consumer>
+         )
        }
+     }
 
+     class Goals extends React.Component {
        addItem = (e) => {
          e.preventDefault()
-         this.props.store.dispatch(handleAddGoal(this.input.value,
-           () => this.input.value=''
+         this.props.dispatch(handleAddGoal(
+           this.input.value,
+           () => this.input.value = ''
          ))
        }
-
-       render(){
+       removeItem = (goal) => {
+         this.props.dispatch(handleDeleteGoal(goal))
+       }
+       render() {
          return (
            <div>
-             <h1>Goals List</h1>
-             <input type="text" placeholder="Add Goal" ref={(input)=> this.input=input } />
-             <button type="button" onClick={this.addItem}>Add Goal</button>
-             <List items={this.props.goals} remove={this.removeItem}/>
+             <h1>Goals</h1>
+             <input
+               type='text'
+               placeholder='Add Goal'
+               ref={(input) => this.input = input}
+             />
+             <button onClick={this.addItem}>Add Goal</button>
+
+             <List
+               items={this.props.goals}
+               remove={this.removeItem}
+             />
            </div>
          )
        }
      }
 
+     class ConnectedGoals extends React.Component {
+       render() {
+         return (
+           <Context.Consumer>
+             {(store) => {
+               const { goals } = store.getState()
+
+               return <Goals goals={goals} dispatch={store.dispatch}/>
+             }}
+           </Context.Consumer>
+         )
+       }
+     }
+
      class App extends React.Component {
+       componentDidMount () {
+         const { store } = this.props
 
-        componentDidMount(){
-          const {store} = this.props
+         store.dispatch(handleInitialData())
 
-          store.dispatch(handleInitialData())
+         store.subscribe(() => this.forceUpdate())
+       }
+       render() {
+         const { store } = this.props
+         const { loading } = store.getState()
 
+         if (loading === true) {
+           return <h3>Loading</h3>
+         }
 
+         return (
+           <div>
+             <ConnectedTodos />
+             <ConnectedGoals />
+           </div>
+         )
+       }
+     }
 
-          store.subscribe(() => this.forceUpdate())
-        }
+     class ConnectedApp extends React.Component {
+       render() {
+         return (
+           <Context.Consumer>
+             {(store) => (
+               <App store={store} />
+             )}
+           </Context.Consumer>
+         )
+       }
+     }
 
-        render(){
-          const {store} = this.props
-          const {goals,todos,loading} = store.getState()
+     const Context = React.createContext()
 
-          if(loading === true){
-            return <h3>Loading...</h3>
-          }
+     class Provider extends React.Component {
+       render () {
+         return (
+           <Context.Provider value={this.props.store}>
+             {this.props.children}
+           </Context.Provider>
+         )
+       }
+     }
 
-          return (
-            <div>
-              <Todos todos={todos} store={this.props.store}/>
-              <Goals goals={goals} store={this.props.store}/>
-            </div>
-          )
-        }
-      }
-
-      ReactDOM.render(
-        <App store={store}/>,
-        document.getElementById('app')
-      )
+     ReactDOM.render(
+       <Provider store={store}>
+         <ConnectedApp />
+       </Provider>,
+       document.getElementById('app')
+     )
     </script>
   </body>
 </html>
